Wed Sep 27 17:37:42 BST 2006 (njh)
----------------------------------
  * clamav-milter:	--report sometimes failed

Wed Sep 27 17:29:24 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	 CL_EXPERIMENTAL now compiles under VS2005

Wed Sep 27 15:26:45 BST 2006 (njh)
----------------------------------
  * libclamav:	Ported the experimental anti-phish code to VS2005

Wed Sep 27 16:05:31 CEST 2006 (tk)
----------------------------------
  * freshclam/freshclam.c: apply w32 patch from NJH

Wed Sep 27 12:48:06 CEST 2006 (tk)
----------------------------------
  * shared/misc.c: apply w32 patch from NJH

Wed Sep 27 12:20:38 CEST 2006 (tk)
----------------------------------
  * freshclam/dns.c: apply w32 support patch from Mark Pizzolato

Wed Sep 27 09:32:40 CEST 2006 (tk)
----------------------------------
  * sigtool/sigtool.c: properly handle .pdb files

Wed Sep 27 02:34:00 CEST 2006 (tk)
----------------------------------
  * libclamav: add support for PE section based MD5 signatures (stored in .mdb)
	       Requested by Christoph
  * sigtool: handle .mdb databases

Tue Sep 26 17:42:17 BST 2006 (njh)
----------------------------------
  * libclamav/mbox.c:	Experimental curl removal: fix proxy handling and
				honour 301/302

Tue Sep 26 09:40:03 BST 2006 (trog)
-----------------------------------
  * libclamav/unrar.c: Don't be so keen to report an error.
		Reported by: Gianluigi Tiesi

Mon Sep 25 19:28:02 BST 2006 (njh)
----------------------------------
  * libclamav/regex_list.c:	Corrected "R" regex handler

Sun Sep 24 21:24:07 CEST 2006 (acab)
------------------------------------
  * libclamav/regex_list.c: fixes for type "R" regex handler
                            (patch from Edvin)

Fri Sep 22 23:42:09 CEST 2006 (tk)
----------------------------------
  * libclamav/others.c: improve error handling in cli_rmdirs()

Thu Sep 21 17:39:29 BST 2006 (njh)
----------------------------------